--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gsap": "^3.4.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
