--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^16.13.1",
     "react-card-flip": "^1.0.11",
     "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
