--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.4.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-card-flip": "^1.0.11",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "sass": "^1.43.4"
   },
   "scripts": {
     "start": "react-scripts start",
